[gd_scene load_steps=2 format=3 uid="uid://dlwwv1fyv8o4r"]

[ext_resource type="Script" path="res://vector_tuner.gd" id="1_kq4sc"]

[node name="vector_tuner" type="VBoxContainer"]
offset_right = 60.0
offset_bottom = 63.0
script = ExtResource("1_kq4sc")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="label" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Vector"
horizontal_alignment = 1

[node name="rotation" type="HSlider" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
max_value = 6.284
step = 0.1

[node name="length" type="HSlider" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[connection signal="value_changed" from="rotation" to="." method="_on_rotation_value_changed"]
[connection signal="value_changed" from="length" to="." method="_on_length_value_changed"]
